package boa.types;

option optimize_for =SPEED;

//Top-level type: represents protein sequence in the NR database
message Sequence{
	required string seqid =1;
	
	// list of all annotations from different databases
	repeated Annotation annotation=2; 
	
	// list of all clusters in different similarity levels
	repeated Cluster cluster=3;  
}

// represents annotation for sequnces
message Annotation{
 	// Annotation ID from different databases
	required string keyID=1; 
	
	// entire definition line as uploaded to NCBI
	required string defline=2; 
	
	// Tax ID from the XML files generated by NCBI
	optional string tax_id =3;  
	
	// Tax name from XML files
	optional string tax_name =4; 
}


// represents cluster which is output of CD-HIT software
message Cluster{
	//required string seqid=1;
	
	// similarity level: 95%, 90%, ..., 65%
	required int64 similarity=1; 
	
	// cluster ID given by the CD-HIT software
	required string cid=2;	  
	
	// represents if a sequence is a representative of a cluster?   
	required bool representative=3; 
	
	//Number till aa : amino acid
	optional int64 length=4; 
	
	// starting point of the sequence as compared with the representative
	optional int64 seq_start=5; 
	
	// stopping point of the sequence
	optional int64 seq_stop=6;  
	
	// starting point of a representative 
	optional int64 rep_start=7; 
	
	// stopping point of a representative 
	optional int64 rep_stop=8; 
	
	// percentages of match between sequence and representative sequence
	optional int64 match=9;  
		
}


